--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -15,13 +15,13 @@ body {
   justify-content: center;
   height: 100vh;
   width: 100vw;
+  background-color: #0a090b;
   font-family: "Muli", sans-serif;
 }
 
 #charts {
   height: 100%;
   width: 100%;
-  background: linear-gradient(#e3e7f1, #7d96c5);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -29,13 +29,24 @@ body {
   overflow: visible;
 }
 
-#pie,
-#lollipop,
-#circular,
-#line {
+#container {
   height: 50%;
   width: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+#pie,
+#lollipop,
+#circular,
+#line {
+  height: 90%;
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #010a0f;
+  box-shadow: 1px 1px 2px 2px #50c5f7;
+  border-radius: 5px;
 }
